@@ -299,7 +299,7 @@ char *alpha_num = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ";
  * the maximum sized array for each dimension.  This way we can be
  * prepared for any size coming in.
  */
-static bool grid[HIGHEST_BASE*HIGHEST_BASE*HIGHEST_BASE*HIGHEST_BASE*HIGHEST_BASE];
+static bool *grid = NULL;
 
 static int grid_start[HIGHEST_DIMENSIONS];
 static int grid_end[HIGHEST_DIMENSIONS];
@@ -3107,7 +3107,7 @@ ssize_t hostlist_ranged_string_dims(hostlist_t hl, size_t n,
 	bool box = false;
 	int hostlist_base;
 	static int last_dims = -1;
-
+	static int max_dims = 1;
 	DEF_TIMERS;
 
 	if (!dims)
@@ -3118,6 +3118,7 @@ ssize_t hostlist_ranged_string_dims(hostlist_t hl, size_t n,
 	LOCK_HOSTLIST(hl);
 
 	if (dims > 1 && hl->nranges) {	/* logic for block node description */
+		static uint64_t grid_size = 1;
 		slurm_mutex_lock(&multi_dim_lock);
 
 		/* compute things that only need to be calculated once
@@ -3126,6 +3127,7 @@ ssize_t hostlist_ranged_string_dims(hostlist_t hl, size_t n,
 		 */
 		if ((last_dims != dims) || (dim_grid_size == -1)) {
 			last_dims = dims;
+
 			dim_grid_size = sizeof(int) * dims;
 
 			/* the last one is always 1 */
@@ -3134,7 +3136,25 @@ ssize_t hostlist_ranged_string_dims(hostlist_t hl, size_t n,
 				offset[i] = offset[i+1] * hostlist_base;
 		}
 
-		memset(grid, 0, sizeof(grid));
+		/* This will leave an allocation when ending but it
+		   isn't overwriting and this makes it so we don't
+		   have to allocate it over and over again we fill
+		   this isn't too bad of an alternative.  We were
+		   defining this on the stack at first (we wanted to
+		   avoid that).
+		*/
+		if (!grid || (grid && (max_dims < dims))) {
+			grid_size = 1;
+			max_dims = dims;
+			xfree(grid);
+
+			for (i=0; i<dims; i++)
+				grid_size *= HIGHEST_BASE;
+			grid_size *= sizeof(bool);
+			grid = xmalloc(grid_size);
+		} else
+			memset(grid, 0, grid_size);
+
 		memset(grid_start, hostlist_base, dim_grid_size);
 		memset(grid_end, -1, dim_grid_size);
 
