@@ -30,6 +30,8 @@ documents those changes that are of interest to users and admins.
  -- If sched/backfill starts a job with a QOS having NO_RESERVE and not job
     time limit, start it with the partition time limit (or one year if the
     partition has no time limit) rather than NO_VAL (140 year time limit);
+ -- Alter hostlist logic to allocate large grid dynamically instead of on
+    stack.
 
 * Changes in SLURM 2.5.0
 ========================
